feat: add User model and migration using Sequelize

--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "multer": "^2.0.1",
+    "pg": "^8.16.3",
+    "sequelize": "^6.37.7",
     "uuid": "^11.1.0"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.3"
   }
 }
